# WordleWise-backend

./: .env.example  Dockerfile  FRONTEND_PASSWORD_VALIDATION.md  README.md  check_duplicates.py  debug_scores.py  docker-compose.yml  download_database.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  reset_password.py  seed_db.py  test.py  test_api_groups.py  test_api_scope.py  test_data.json  test_models.py  update_score.py
.github/workflows/: deploy.yml
archive/migrations/: 003_create_user_table.sql
config/: app.py  limiter.py
database/: Database.py  migrate.py
database/aws/: download_database.py  upload_database.py
database/migrations/: 001_create_day_table.sql  001_create_table.sql  002_insert_data.sql  002_insert_data_into_day_table.sql  004_insert_data_into_user_table.sql
database/models/: Day.py  Group.py  GroupMember.py  Score.py  User.py  __init__.py
remote-scripts/: copy_database_to_dev.py  execute_sql.py
remote-scripts/sql/: add_admin_column_to_user_table.sql  add_forename_column_to_user_table.sql  add_forenames_to_user_table.sql  create_score_table.sql  make_kjem500_admin_user.sql  make_wjrm500_admin_user.sql  populate_score_table.sql
routes/: admin.py  auth.py  groups.py  scores.py  users.py  wordle.py
scripts/: seed_db.py
tests/: conftest.py
tests/database/: DatabaseTest.py
tests/integration/: test_api_groups.py  test_api_scope.py  test_user_journey.py
tests/unit/: test_database.py  test_models.py
tests/unit/database/: test_database.py
utils/: auth_helpers.py  error_handler.py  invite_code.py  serializers.py
(+6 files in other folders)
